revamped index page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,4 @@
-<div class="bg-light py-4 text-center" style="position: relative; z-index: 1">
-  <div class="container">
-    <h4>Working on an interesting project? <strong>Let's chat</strong></h4>
-    <p class="pt-2">
-      <a href="" class="px-2"><img src="assets/img/mail.svg" width="40" alt="Email" /></a>
-      <a href="" class="px-2"><img src="assets/img/whatsapp.svg" width="40" alt="WhatsApp" /></a>
-    </p>
-  </div>
-</div>
+{% include connect.html %}
 <footer class="bg-secondary p-2 w-100">
   <div class="container">
     <div class="row text-white">
@@ -14,10 +6,13 @@
         Damilola Oduronbi &copy; 2020
       </div>
       <div class="col-md-6 font-small text-md-right" style="line-height: 140%">
-        Site built with&nbsp;
-        <a class="link" href="">Jekyll</a>,&nbsp;
-        hosted on <a class="link" href="">GitHub</a>.&nbsp;
-        Beautiful icons from <a class="link" href="">Flaticons</a>
+        Built with
+        &nbsp;
+        <a href="">Jekyll</a>.
+        &nbsp;
+        Hosted on <a href="">Netlify</a>.
+        &nbsp;
+        Icons from <a href="">Flaticons</a>
       </div>
     </div>
   </div>
