--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,21 @@
 <header class="bg-white">
   <div class="container shadow pb-1 mx-auto bg-white">
     <div class="row align-items-center">
-      <div class="col-6 col-md-3 order-1">
-        <img src='assets/img/logo.svg' alt='Logo' />
+      <div class="col-6 col-md-3 order-1 py-1">
+        <img src='assets/img/logo.svg' width="140" alt='Logo' />
       </div>
       <div class="navigation col-xs-12 col-md-6 py-2 text-md-center mx-auto order-3 order-md-2">
         {% include navigation.html %}
       </div>
-      <div class="col-6 col-md-3 order-2 order-md-3 text-right">
-        <a href="">
-          <img src="assets/img/linkedin.svg" alt="LinkedIn | Damilola Oduronbi" />
+      <div class="header-social-icons col-6 col-md-3 order-2 order-md-3 text-right">
+        <a href="https://www.linkedin.com/in/doduronbi/" target="_blank" class="mr-3">
+          <img src="assets/img/linkedin.svg" width="20" alt="LinkedIn | Damilola Oduronbi" />
         </a>
-        &ensp;
-        <a href="">
-          <img src="assets/img/coderank.svg" alt="CoderRank | Damilola Oduronbi" />
+        <a href="https://profile.codersrank.io/user/oracleot" target="_blank" class="mr-3">
+          <img src="assets/img/coderank.svg" width="20" alt="CoderRank | Damilola Oduronbi" />
         </a>
-        &ensp;
-        <a href="">
-          <img src="assets/img/github.svg" alt="GitHub | Damilola Oduronbi" />
+        <a href="" target="_blank">
+          <img src="assets/img/github.svg" width="20" alt="GitHub | Damilola Oduronbi" />
         </a>
       </div>
     </div>
