--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,16 +1,22 @@
-<div class="container">
+<div class="container my-4">
   <div class="row">
-    <div class="col-md-10">
-      <h1 class="me">Welcome<span class="color-secondary">!</span></h1>
+    <div class="col-md-10 offset-md-1 text-center">
+      <h1 class="me">Damilola Oduronbi</h1>
       <p>
-        I am <span class="color-secondary text-uppercase">Damilola Oduronbi</span>;<br />
-        A <strong>Frontend Developer</strong> and <strong>UX Designer</strong> with <strong>over 6 years</strong> experience buiding usable digital products.
-      </p>
-      <p>
-        I currently <strong>Lead</strong> the software development team at <a class="link" href="">TalentUp Africa</a> and also <strong>Mentor</strong> at <a class="link" href="">MentorCruise</a>.
+        <span class="font-large">Frontend Developer and UX Designer with over 6 years experience</span>
         <br />
-        Previously, I worked at <a class="link" href="">Guaranty Trust Bank, Nigeria</a> as a <strong>UX Design Consultant</strong> and as a <strong>Creative Strategist (UX Designer)</strong> at <a class="link" href="">Konga Online Shopping Ltd</a>.
+        <span class="text-secondary">Team Lead @ <a class="link" href="">TalentUp Africa</a></span>
+        &nbsp;|&nbsp;
+        <span class="text-secondary">Mentor @ <a class="link" href="">MentorCruise</a></span>
+      </p>
+      <p class="font-small">
+        <strong><em>Previously</em></strong>
+        <br />
+        UX Design Consultant at <a class="link" href="">Guaranty Trust Bank, Nigeria</a>
+        <br />
+        Creative Strategist (UX Designer) at <a class="link" href="">Konga Online Shopping Ltd</a>
       </p>
     </div>
   </div>
+  {% include tools.html %}
 </div>
