--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -1,8 +1,8 @@
 <div
-  class="rounded-circle bg-light"
-  style="width: 200px; height: 200px; position: fixed; top: 15vh; right: -40px;">
+  class="rounded-circle"
+  style="width: 200px; height: 200px; position: fixed; top: 15vh; right: -40px; background-color: rgba(0,0,0,0.05)">
 </div>
 <div
-  class="rounded-circle bg-light"
-  style="width: 100px; height: 100px; position: fixed; top: 65vh; left: -40px">
+  class="rounded-circle"
+  style="width: 100px; height: 100px; position: fixed; top: 65vh; left: -40px; background-color: rgba(0,0,0,0.05)">
 </div>
