--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,108 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap');
 
-body {
-  font-family: 'PT Sans Narrow', sans-serif;
-  color: #3D3D3D;
-  line-height: 165%;
-  font-size: 18px;
+ body {
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 400;
+ }
+
+ h1, h2, h3 {
+   font-family: 'Playfair Display', serif;
+ }
+
+ .me {
+   font-weight: 400;
+   font-size: 72px;
+ }
+
+ .font-large {
+   font-size: 24px;
+ }
+
+ .font-small {
+   font-size: 14px;
+ }
+
+ header {
+   position: fixed;
+   top: 0;
+   width: 100%;
+   z-index: 3;
+ }
+
+.header-social-icons {
+  a {
+    opacity: 0.7;
+    transition: 0.3s;
+
+    &:hover {
+      text-decoration: none;
+      opacity: 1.0;
+    }
+  }
 }
 
-a {
-  color: #3D3D3D;
-  text-decoration: none !important;
+.navigation {
+  a {
+    padding-left: 7px;
+    padding-right: 7px;
+    color: rgba(0,0,0,0.32);
+
+    &:hover {
+      color: rgba(0,0,0,1) !important;
+    }
+  }
 }
 
-ul {
-  padding-left: 0;
-  list-style-type: none;
-}
-
-h1 {
-  font-size: 48px;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
-.font-regular {
-  font-size: 16px;
-}
-.font-small {
-  font-size: 14px;
-}
-
-header {
-  background-color: rgba(255,255,255,0.96);
-  position: fixed;
-  width: 100%;
-  padding: 5px auto;
-  z-index: 3;
-}
-
-nav {
-  top: 0;
-  border-bottom: solid thin #F5F5F5;
-}
-
-.highlight-synthax {
-  background-color: #F5F5F5;
-  border-radius: 3px;
+.current {
+  text-decoration: underline;
+  color: rgba(0,0,0,1) !important;
 }
 
 .content {
-  padding-top: 100px;
-  padding-bottom: 30px;
-  min-height: 93vh;
+  padding-top: 10vh;
 }
 
-.color-secondary {
-  color: rgba(61,61,61,0.67);
+.intro {
+  min-height: 70vh;
+  display: flex;
+  align-items: center;
 }
 
 footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
+  a {
+    color: rgba(255,255,255,0.7);
 
-  .link {
-    color: white !important;
-  }
-}
-
-.navigation a {
-  font-size: 16px;
-  color: rgba(61,61,61,0.67);
-  padding-right: 15px;
-  text-align: center;
-
-  &:last-child {
-    padding-right: 0px;
-  }
-
-  &:hover {
-    color: rgb(61,61,61);
-    text-decoration: underline !important;
-  }
-}
-
-.current, .link {
-  color: rgb(61,61,61) !important;
-  text-decoration: underline !important;
-}
-
-@media screen and (max-width: 768px) {
-  .navigation {
-    a {
-      padding: 0;
-      padding-top: 10px;
-      display: inline-block;
-      width: 25%;
-      line-height: 120%;
-
-      &:nth-child(2) {
-        width: 46%;
-      }
+    &:hover {
+      color: rgba(255,255,255,1.0);
     }
   }
 }
