started notes page

--- a/_includes/connect.html
+++ b/_includes/connect.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h4>Working on an interesting project? <strong>Let's chat</strong></h4>
     <p class="pt-2">
-      <a href="" class="px-2"><img src="assets/img/mail.svg" width="40" alt="Email" /></a>
-      <a href="" class="px-2"><img src="assets/img/whatsapp.svg" width="40" alt="WhatsApp" /></a>
+      <a target="_blank" href="mailto:doduronbi@gmail.com" class="px-2"><img src="assets/img/mail.svg" width="40" alt="Email" /></a>
+      <a target="_blank" href="https://wa.me/2347036619688?text=Hi%20Damilola,%20I'm%20from%20your%20website" class="px-2"><img src="assets/img/whatsapp.svg" width="40" alt="WhatsApp" /></a>
     </p>
   </div>
 </div>
