--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,13 @@
 <footer class="bg-secondary p-2 w-100">
   <div class="container">
     <div class="row text-white">
-      <div class="col-md-6">
+      <div class="col-md-6 text-center text-md-left">
         Damilola Oduronbi &copy; 2020
       </div>
-      <div class="col-md-6 font-small text-md-right" style="line-height: 140%">
-        Built with
+      <div class="col-md-6 font-small text-center text-md-right" style="line-height: 140%">
+        Built with <a target="_blank" href="https://jekyllrb.com/">Jekyll</a>.
         &nbsp;
-        <a href="">Jekyll</a>.
-        &nbsp;
-        Hosted on <a href="">Netlify</a>.
-        &nbsp;
-        Icons from <a href="">Flaticons</a>
+        Hosted on <a target="_blank" href="https://www.netlify.com/">Netlify</a>.
       </div>
     </div>
   </div>
