--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,20 +1,20 @@
-<div class="container my-4">
+<div class="container my-5">
   <div class="row">
     <div class="col-md-10 offset-md-1 text-center">
-      <h1 class="me">Damilola Oduronbi</h1>
+      <h1 class="me text-secondary mb-0">Damilola Oduronbi</h1>
       <p>
-        <span class="font-large">Frontend Developer and UX Designer with over 6 years experience</span>
+        <span class="font-large">Frontend Developer with over 6 years experience</span>
         <br />
-        <span class="text-secondary">Team Lead @ <a class="link" href="">TalentUp Africa</a></span>
+        <span class="text-secondary">Team Lead @ <a target="_blank" href="https://talentup.africa/">TalentUp Africa</a></span>
         &nbsp;|&nbsp;
-        <span class="text-secondary">Mentor @ <a class="link" href="">MentorCruise</a></span>
+        <span class="text-secondary">Mentor @ <a target="_blank" href="https://mentorcruise.com/mentor/DamilolaOduronbi/">MentorCruise</a></span>
       </p>
       <p class="font-small">
-        <strong><em>Previously</em></strong>
+        <strong>Previously</strong>
         <br />
-        UX Design Consultant at <a class="link" href="">Guaranty Trust Bank, Nigeria</a>
+        UX Design Consultant at <a target="_blank" href="https://www.gtbank.com/">Guaranty Trust Bank, Nigeria</a>
         <br />
-        Creative Strategist (UX Designer) at <a class="link" href="">Konga Online Shopping Ltd</a>
+        Creative Strategist (UX Designer) at <a target="_blank" href="https://www.konga.com/">Konga Online Shopping Ltd</a>
       </p>
     </div>
   </div>
