--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,12 +1,19 @@
-<div class="container text-center py-3">
-  <img src="assets/img/tools/html.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/css.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/js.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/react.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/node.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/jekyll.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/ruby.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/atom.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/visual-studio.png" width="70" alt="HTML" class="m-2">
-  <img src="assets/img/tools/sketch.png" width="70" alt="HTML" class="m-2">
+<div class="container text-center py-4">
+  <strong class="font-small">Design &amp; Development Tools</strong>
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <img src="assets/img/tools/html.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/css.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/js.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/react.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/node.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/jekyll.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/ruby.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/atom.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/visual-studio.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/figma.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/sketch.png" width="60" alt="HTML" class="m-2">
+      <img src="assets/img/tools/invision.png" width="60" alt="HTML" class="m-2">
+    </div>
+  </div>
 </div>
