--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="bg-white">
   <div class="container shadow pb-1 mx-auto bg-white">
     <div class="row align-items-center">
-      <div class="col-6 col-md-3 order-1 py-1">
-        <img src='assets/img/logo.svg' width="140" alt='Logo' />
+      <div class="col-6 col-md-3 order-1 py-2">
+        <a href="/"><img src='assets/img/logo.svg' width="140" alt='Logo' /></a>
       </div>
       <div class="navigation col-xs-12 col-md-6 py-2 text-md-center mx-auto order-3 order-md-2">
         {% include navigation.html %}
@@ -14,7 +14,7 @@
         <a href="https://profile.codersrank.io/user/oracleot" target="_blank" class="mr-3">
           <img src="assets/img/coderank.svg" width="20" alt="CoderRank | Damilola Oduronbi" />
         </a>
-        <a href="" target="_blank">
+        <a href="https://github.com/oracleot" target="_blank">
           <img src="assets/img/github.svg" width="20" alt="GitHub | Damilola Oduronbi" />
         </a>
       </div>
