--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 {% for item in site.data.navigation %}
-  <a href="{{ item.link }}" {% if page.url == item.link %} class="current" {% endif %}>
+  <a target="{{ item.target }}" href="{{ item.link }}" {% if page.url == item.link %} class="current" {% endif %}>
   {{ item.name }}
   </a>
 {% endfor %}
